Add new download page
Add a new download page for the Hackboto Tech Tips Computer Optimiser scripts

--- a/download_centre.html
+++ b/download_centre.html
@@ -62,6 +62,12 @@
                 <p>Download the Hackboto Tech Tips POPCNT Checker program, learn if your computer system is ready for Windows 11 24H2 by checking to see if it supports the POPCNT CPU instruction.</p> <!-- Article excerpt -->
                 <a href="download_centre/popcnt_checker.html" title="Visit POPCNT Checker download page">Download Page</a> <!-- Link to full article -->
             </div>
+            <div class="articlecolumn" title="Computer Optimiser"> <!-- Article column -->
+                <h3>Computer Optimiser Scripts</h3> <!-- Article title -->
+                <img src="download_centre/computer_optimiser/system_optimiser.png" alt="An image representing the Hackboto Tech Tips System Optimiser" title="Image representing the System Optimiser Software"><!-- Image related to the article -->
+                <p>Download the Hackboto Tech Tips Computer Optimise Scripts, improve the performance of you Windows 10/ 11 PC by removing old files and system level corruption.</p> <!-- Article excerpt -->
+                <a href="download_centre/computer_optimiser.html" title="Visit Computer Optimiser download page">Download Page</a> <!-- Link to full article -->
+            </div>
         </div>
     </section>
     <footer title="Website Footer"> <!-- Footer section -->
