--- a/pc_tips/windows_optimise.html
+++ b/pc_tips/windows_optimise.html
@@ -80,7 +80,7 @@
                     <p class="imgdescription">It might not be the prettiest solution but the Hackboto Tech Tips Computer Optimiser checks for system level corruption and repairs it, and it removes junk from your computer.</p>
                     <p>The Hackboto Tech Tips System_Optimiser and User_Optimiser are ideal for people who do not have a high level of technical knowledge and want to improve the stability and performance of their computer system at the touch of a button.</p>
                     <p>You can learn more about the Hackboto Tech Tips System_Optimiser & User_Optimiser by clicking on the link below.</p>
-                    <a class="linkbutton" title="Visit Computer Optimiser Download Page" href="">Learn More (Coming Soon)</a>
+                    <a class="linkbutton" title="Visit Computer Optimiser Download Page" href="https://hackbototechtips.github.io/download_centre/computer_optimiser.html">Visit Computer Optimiser download page</a>
                     <p><strong>Before you run any scripts on your computer system, I would advise you to back up your system first so that you can restore it back to its previous state in the event that anything goes wrong.</strong> Guide on this coming soon!</p>
             <h3 id="defrag">How to defragment your Hard Disk Drive.</h3>
                 <img src="windows_optimise/windows_defragment.png" alt="an image representing the Windows 11 system drive defragment utility">
