--- a/download_centre/settings_optimiser.html
+++ b/download_centre/settings_optimiser.html
@@ -63,7 +63,7 @@
                         <p>When running the System_Settings_Optimiser you might see this error, you need to click 'Run' to continue."</p>
                     <img src="settings_optimiser/clickonmoreinfo.png" alt="Visual representation of error, you might face an antivirus error, if this happens click on 'More info'.">
                         <p>Sometimes the script will be blocked by the built-in antivirus, this is because the script was not created on your computer, if you see this error you will need to click on 'More info'.</p>
-                    <img src="settings_optimiser/clickonmoreinfo.png" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
+                    <img src="settings_optimiser/runanyway.png" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
                         <p>After clicking on 'More info' you will need to click on 'Run anyway' to continue.</p>    
                     <img src="settings_optimiser/UAC.png" alt="Image representing User Account Control.">
                         <p>You will be asked to enter your Admin password at this stage, once you enter your password click yes. You might not need a password if you are using an Admin account to run the script.</p>
@@ -71,9 +71,8 @@
                         <p>By this stage the System_Settings_Optimiser should be running, you will be asked to read through the Terms and Conditions, enter 'Y' if you agree to the Terms and Conditions and would like to start the script, if you do not agree with the Terms and Conditions enter 'N' and the script will close, and no changes will be made to your computer.</p>
                         <p>Once the script has completed you will see a message telling you this, when you click OK, your computer will restart, and you can move onto step 2.</p>
                 <h3>Step 2, Run User__Settings_Optimiser</h3>
-                    <p>You only need to carry out this step if you have more than one user account on your computer.</p>
-                    <p>This script does not require admin rights; therefore, you can run it on both standard and admin accounts. If you many user accounts on your computer, you will need to run the script on each account.</p>
-                    <p>To run the script, you need to repeat the steps in step 1, however you need to run the User_Settings_Optimiser.bat instead of the System_Settings_Optimiser.</p>
+                    <p>This script does not require admin rights; therefore, you can run it on both standard and admin accounts. If you have many user accounts on your computer, you will need to run the script on each account.</p>
+                    <p>To run the script, you need to repeat the steps in step 1, however you need to run the User_Settings_Optimiser.bat instead of the System_Settings_Optimiser.bat.</p>
         <hr> 
         <p>Page Updated: 28/05/2024</p>
         <p>Page Author: Hackboto</p>
