--- a/map.html
+++ b/map.html
@@ -12,7 +12,7 @@
     <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Sitemap | Hackboto Tech Tips</title> <!-- Document title -->
 </head>
-<body class="black">
+<body>
     <header> <!-- Header section -->
         <div class="logo">
             <img src="index/BrandLogo.png" alt="company logo" title="Hackboto Tech Tips logo"> <!-- Logo image -->
@@ -33,14 +33,19 @@
         </div>
     </nav>
     <br>
+    <div class="welcometext">
+        <h1>Hackboto Tech Tips Sitemap Page</h1> <!-- Welcome text -->
+        <p>You have reached the Hackboto Tech Tips sitemap page, here you will find a structured list containing links to of all the webpages featured on this website.</p> <!-- Introduction paragraph -->
+    </div>
+    <br>
     <section class="sitemap" title="Website Sitemap"> <!-- Sitemap section -->
         <div title="Top Level Pages"> <!-- Level 1 -->
-            <h1><a href="index.html" title="Go to Homepage">Homepage</a></h1> <!-- Level 1 heading -->
+            <h2><a href="index.html" title="Go to Homepage">Hackboto Tech Tips Homepage</a></h1> <!-- Level 2 heading -->
             <ul> <!-- Unordered list -->
             </ul>
         </div>
         <div title="Level 2 pages"> <!-- Level 2 -->
-            <h2><a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a></h2> <!-- Level 2 heading -->
+            <h2 class="l2"><a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a></h2> <!-- Level 2 heading -->
             <ul> <!-- Unordered list -->
                 <li><h3><a href="pc_tips/upgrading_to_windows11.html" title="Learn how and why you should upgrade to Windows 11">Upgrade to Windows 11</a></h3></li>
                 <li><h3><a href="pc_tips/windows_optimise.html" title="Learn how you can optimise your Windows PC">Optimising Windows 10/ 11</a></h3></li>
