--- a/pc_tips.html
+++ b/pc_tips.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
     <br>
-    <section id="pc_tips" title="PC Guides"> <!-- Section for PC Tips and Tricks -->
+    <section id="pc_tips" title="PC Guides" loading="eager"> <!-- Section for PC Tips and Tricks -->
         <div class="pagewelcome">
             <h1>PC Guides</h1> <!-- Page heading -->
             <p>On this page you will find all my helpful tips and tricks regarding your personal computer, you will find tips on reducing the number of ads you see, improving your system performance, getting the most out of your existing computer, and much more.</p> <!-- Page description -->
