--- a/download_centre.html
+++ b/download_centre.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
     <br>
-    <section id="download_centre" title="Download Centre" loading="eager"> <!-- Section for download centre-->
+    <section title="Download Centre"> <!-- Section for download centre-->
         <div class="pagewelcome">
             <h1>Download Centre</h1> <!-- Page heading -->
             <p>This is where you can find all of the software that I am currently distributing, below you will find the latest versions of all my software.</p> <!-- Page description -->
