--- a/pc_tips/windows_debloat.html
+++ b/pc_tips/windows_debloat.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Learn about the tools and ways in which you can improve the performance of your Windows based computer by removing unnecessary bloat and spyware.">
     <meta name="keywords" content="Windows, debloat, optimisation, tool, performance, old, computer">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Debloating Windows | Hackboto Tech Tips</title>
