--- a/download_centre/multi-pane_overlay_disable_reg.html
+++ b/download_centre/multi-pane_overlay_disable_reg.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Download page for the Hackboto Tech Tips Multi-Plane Overlay Registry Fix for black screens and artefacts when using Hardware Acceleration on Windows 10/ 11">
     <meta name="keywords" content="Hardware, Acceleration, Black Screen, Fix, Multi-Plane Overlay, MPO">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>MPO Fix Download | Hackboto Tech Tips</title>
