--- a/download_centre/popcnt_checker.html
+++ b/download_centre/popcnt_checker.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This is the download page for the Hackboto Tech Tips Settings Optimiser.">
     <meta name="keywords" content="Software, checker, Windows 11, 24H2, popcnt">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>POPCNT Checker | Hackboto Tech Tips</title>
