--- a/download_centre/settings_optimiser.html
+++ b/download_centre/settings_optimiser.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This is the download page for the Hackboto Tech Tips Settings Optimiser.">
     <meta name="keywords" content="Software, Script, Debloat, Optimise, disable, telemetry, privacy">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Settings Optimiser | Hackboto Tech Tips</title>
