--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
     <meta name="google-site-verification" content="f8S6yQTL9ORzSZWiIDBfWoLoQwuuY6HW2ENlfExnMmo">
     <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="favicon/HTTfavicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Homepage | Hackboto Tech Tips</title> <!-- Document title -->
