--- a/pc_tips.html
+++ b/pc_tips.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Windows 11, Windows 10, Tips, Debloat, Adware, Remove, Optimise">
     <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
     <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="favicon/HTTfavicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>PC Guides | Hackboto Tech Tips</title> <!-- Document title -->
