--- a/pc_tips/hardware_acceleration_black_screen_fix.html
+++ b/pc_tips/hardware_acceleration_black_screen_fix.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Learn how to fix black squares and black flashing screens in Google Chrome, Zoom, Microsoft Office, etc.">
     <meta name="keywords" content="Google Chrome, black squares, black screen, hardware acceleration, Multi-Plane Overlay, fix">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Black Screen HW Acceleration Fix | Hackboto Tech Tips</title>
