--- a/pc_tips/windows_backup.html
+++ b/pc_tips/windows_backup.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Learn how you can back up your Windows 10/ 11 PC for free without using the cloud.">
     <meta name="keywords" content="Windows, backup, files, guide, how, to, computer, Lazesoft, Recovery, Suite">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>PC Backup Guide | Hackboto Tech Tips</title>
