--- a/pc_tips/windows_optimise.html
+++ b/pc_tips/windows_optimise.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Has your old Windows PC gotten slow and frustrating to use? If it has, learn about the Hackboto Tech Tips system optimiser.">
     <meta name="keywords" content="Windows, declutter, optimisation, tool, performance, old, computer">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Optimising Windows | Hackboto Tech Tips</title>
