Add new Article
Added new blocking ads on your PC article

--- a/pc_tips.html
+++ b/pc_tips.html
@@ -78,6 +78,13 @@
                 <p>Do you regularly back up your files and computer system? If not, you need to start doing so in the event that your PC fails unexpectedly or becomes corrupted, learn about backing up your computer the correct way without the "Cloud".</p> <!-- Article excerpt -->
                 <a href="pc_tips/windows_backup.html" title="Learn About backing up your computer and your files.">Read Article</a> <!-- Link to full article -->
             </div>
+            <div class="articlecolumn" title="Blocking ads on your PC"> <!-- Article column -->
+                <h3>Blocking ads on your PC</h3> <!-- Article title -->
+                    <hr>
+                <img src="pc_tips/adblocker/ads_everywhere.png" alt="An image representing ads everywhere" title="Image showing ads on a webpage."><!-- Image related to the article -->
+                <p>Are you getting sick of long loading times, popups, and distracting adverts everywhere on the internet? If you are you should learn about the uBlock Origin browser extension and how you can get rid of annoying ads once and for all.</p> <!-- Article excerpt -->
+                <a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">Read Article</a> <!-- Link to full article -->
+            </div>
         </div>
     </section>
     <footer title="Website Footer"> <!-- Footer section -->
