--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the viewport for responsive design -->
     <meta name="description" content="This is the sitemap for Hackboto Tech Tips, you can find all of the webpages here.">
     <meta name="keywords" content="Hackboto, Tech, Tips, sitemap">
-    <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
+    <meta name="robots" content="noindex,nofollow"> <!-- Prevent search engine indexing -->
     <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
