--- a/download_centre/popcnt_checker.html
+++ b/download_centre/popcnt_checker.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the download page for the Hackboto Tech Tips Settings Optimiser.">
     <meta name="keywords" content="Software, checker, Windows 11, 24H2, popcnt">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
