--- a/pc_tips/windows_debloat.html
+++ b/pc_tips/windows_debloat.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about the tools and ways in which you can improve the performance of your Windows based computer by removing unnecessary bloat and spyware.">
     <meta name="keywords" content="Windows, debloat, optimisation, tool, performance, old, computer">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
