--- a/download_centre/multi-pane_overlay_disable_reg.html
+++ b/download_centre/multi-pane_overlay_disable_reg.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Download page for the Hackboto Tech Tips Multi-Plane Overlay Registry Fix for black screens and artefacts when using Hardware Acceleration on Windows 10/ 11">
     <meta name="keywords" content="Hardware, Acceleration, Black Screen, Fix, Multi-Plane Overlay, MPO">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
