--- a/pc_tips/adblocker.html
+++ b/pc_tips/adblocker.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about blocking ads on your PC by installing the uBlock Origin extension.">
     <meta name="keywords" content="Microsoft, Google, Chrome, Edge, Adblock, Ads">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
