--- a/pc_tips/hardware_acceleration_black_screen_fix.html
+++ b/pc_tips/hardware_acceleration_black_screen_fix.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn how to fix black squares and black flashing screens in Google Chrome, Zoom, Microsoft Office, etc.">
     <meta name="keywords" content="Google Chrome, black squares, black screen, hardware acceleration, Multi-Plane Overlay, fix">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
