--- a/pc_tips/windows_backup.html
+++ b/pc_tips/windows_backup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn how you can back up your Windows 10/ 11 PC for free without using the cloud.">
     <meta name="keywords" content="Windows, backup, files, guide, how, to, computer, Lazesoft, Recovery, Suite">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
