--- a/download_centre/computer_optimiser.html
+++ b/download_centre/computer_optimiser.html
@@ -45,7 +45,7 @@
     <article title="Main Article Content"> <!-- Main article content -->
         <h1>Download: Computer Optimiser Scripts</h1>
             <img src="computer_optimiser/system_optimiser.png" alt="an image representing the System Optimiser Script.">
-                <p id="imgdescription">The Hackboto Tech Tips Computer Optimiser Scripts are really easy to use, just follow the instructions that you are provided with.</p>
+                <p class="imgdescription">The Hackboto Tech Tips Computer Optimiser Scripts are really easy to use, just follow the instructions that you are provided with.</p>
             <h2 id="function">What Does the Script Do?</h2>
                 <p>The Hackboto Tech Tips Computer Optimiser scripts are free scripts that remove old and unnecessary system files such as error logs, previous updates, etc, as well as old unnecessary files from your user account such as old application logs, and other junk files that will eat up your storage space.</p>
             <h2 id="download">Downloading the scripts</h2>
