--- a/download_centre/multi-pane_overlay_disable_reg.html
+++ b/download_centre/multi-pane_overlay_disable_reg.html
@@ -45,7 +45,7 @@
     <article title="Main Article Content"> <!-- Main article content -->
         <h1>Download: Multi-Plane Overlay Fix</h1>
             <img src="multi-pane_overlay_disable_reg/disable_mpo.png" alt="image representing the registry contents of the MPO disable .reg file.">
-                <p id="imgdescription">The Disable_MPO.reg and Enable_MPO.reg files can be used to disable the Windows 8.1, 10, 11 Multi-Plane Overlay feature.</p>
+                <p class="imgdescription">The Disable_MPO.reg and Enable_MPO.reg files can be used to disable the Windows 8.1, 10, 11 Multi-Plane Overlay feature.</p>
             <h2 id="function">What do the .reg files do?</h2>
                 <p>There are two .reg files, these files enable and disable the Multi-Plane Overlay feature that is present in Windows 8.1 and later.</p>
                 <p>In later versions of Windows 10 and in Windows 11 the Multi-Plane Overlay feature can cause problems with Hardware Acceleration, this can result in black artefacts, black checkerboards, and black flashing screens, etc, to learn more visit the 'Fix Hardware Acceleration Black Screen' article.</p>
