--- a/download_centre/popcnt_checker.html
+++ b/download_centre/popcnt_checker.html
@@ -45,7 +45,7 @@
     <article title="Main Article Content"> <!-- Main article content -->
         <h1>Download: POPCNT Checker</h1>
             <img src="popcnt_checker/popcnt.png" alt="an image representing the POPCNT Checker, Says POPCNT is NOT supported on this processor.">
-                <p id="imgdescription">The Hackboto Tech Tips POPCNT Checker is really easy to use, just run it and it will tell you if your PC supports POPCNT.</p>
+                <p class="imgdescription">The Hackboto Tech Tips POPCNT Checker is really easy to use, just run it and it will tell you if your PC supports POPCNT.</p>
             <h2 id="function">What Does the POPCNT Checker Do?</h2>
                 <p>The Hackboto Tech Tips POPCNT Checker is a small yet powerful program that will check if your PC supports the POPCNT CPU instruction set.</p>
                 <p>The POPCNT Checker can be handy for things like upgrading to Windows 11 on unsupported hardware, this is because one of the new requirements of the latest Windows 11 24H2 operating system is that your CPU supports POPCNT, if you upgrade and your PC does not support it, it will stop working.</p>
