--- a/download_centre/settings_optimiser.html
+++ b/download_centre/settings_optimiser.html
@@ -45,7 +45,7 @@
     <article title="Main Article Content"> <!-- Main article content -->
         <h1>Download: Settings Optimiser Scripts</h1>
             <img src="settings_optimiser/system_settings_optimiser.png" alt="an image representing the Settings Optimiser Script.">
-                <p id="imgdescription">The Hackboto Tech Tips Settings Optimiser Script is really easy to use, just follow the instructions that you are provided with.</p>
+                <p class="imgdescription">The Hackboto Tech Tips Settings Optimiser Script is really easy to use, just follow the instructions that you are provided with.</p>
             <h2 id="function">What Does the Script Do?</h2>
                 <p>The Hackboto Tech Tips Settings Optimiser script is a free script that changes your Windows 10/ 11 settings, many of the settings changed are not accessible through the standard settings app, this is where the script comes into play as it disables unnecessary telemetry and data collection on your PC, the script will also disable non-essential system services that are made redundant as a result of the changes to your settings.</p>
                 <p>The script will disable things that are generally considered to be bloatware and adware on your PC, this script will remove things like Co-Pilot AI, Feed from Microsoft Edge browser, Windows spotlight, etc.</p>
