--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -51,7 +51,7 @@
     <article title="Main Article Content"> <!-- Main article content -->
         <h1 id="Article-Title">Upgrading to Windows 11</h1>
             <img src="upgrading_to_windows11/upgradefrom10to11.jpg" alt="Transitioning from Windows 10 to Windows 11">
-                <p id="imgdescription">The time to transition from Windows 10 to Windows 11 is here.</p>
+                <p class="imgdescription">The time to transition from Windows 10 to Windows 11 is here.</p>
             <h2 id="Introduction">Introduction</h2>
                 <p>Windows 11 was released on 05/10/2021, making it three years old this year, if you are running Windows 10 or older you need to upgrade to ensure that your PC remains updated and compatible with the latest software.</p>
                 <p>Windows 10 will stop receiving security updates in 2025, this means that you have just under a year to upgrade or risk becoming vulnerable to cyber-attacks.</p>
