--- a/pc_tips/adblocker.html
+++ b/pc_tips/adblocker.html
@@ -29,7 +29,7 @@
             <a href="../contact.html" title="Visit Contact page">Contact</a>
         </div>
             <div class="columnclose">
-            <div class="nav"><a href="javascript:void(0);" rel="nofollow" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
+            <div class="nav"><a href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
         </div>
       </nav>
       <aside title="Jump To Section"> <!-- Aside section for additional content -->
@@ -50,7 +50,7 @@
     <article title="Main Article Content"> <!-- Main article content -->
         <h1 id="Article-Title">Blocking advertisements on your PC</h1>
             <img src="adblocker/ads_everywhere.png" alt="Webpage full of ads">
-                <p id="imgdescription">Ads are annoying, they also put you at risk from scams and malware.</p>
+                <p class="imgdescription">Ads are annoying, they also put you at risk from scams and malware.</p>
             <h2 id="Introduction">Introduction</h2>
                 <p>Advertisements are commonplace on the internet as they are a really quick and easy way to make a few quick quid here and there for the website owners/ operators, however in recent years advertisements have become more common place as website owners/ operators are becoming greedier and wanting a larger income from their sites at your expense.</p>
                 <p>You can block these annoying advertisements on your PCs web browser for free using an adblocker.</p>
@@ -59,27 +59,27 @@
             <h2 id="uBlock">uBlock Origin content blocker</h2> 
             <p>uBlock Origin is by far the best adblocker for your PC, it is an extension that you install on your web browser, this means that all of the websites you visit on your PC will have ads blocked by default once you install the extension.</p>
             <p>The uBlock Origin content blocker is fully free to use, it is also open-source and the lead developer actually refuses donations for the project. You can learn more about uBlock Origin by visiting the official website.</p>
-            <a class="linkbutton" title="Visit ublockorigin.com" rel="nofollow" href="https://ublockorigin.com/">uBlock Origin official website</a>
+            <a class="linkbutton" title="Visit ublockorigin.com" href="https://ublockorigin.com/">uBlock Origin official website</a>
             <h2 id="installing-ublock">How to install uBlock Origin</h2>
                 <p>It is really easy to install uBlock Origin on your PCs web browser you just need to follow the guide below for your particular web browser.</p>
                 <h3 id="EDGE">Installing uBlock Origin on Microsoft Edge</h3>
                     <img src="adblocker/edge_get.png" alt="Get uBlock Origin for Microsoft Edge">
                     <p>To install uBlock Origin on Microsoft Edge you need to visit the uBlock Origin page in the Edge Add-ons and click on the "Get" button.</p>
-                    <a class="linkbutton" title="Edge Add-ons: uBlock Origin" rel="nofollow" href="https://microsoftedge.microsoft.com/addons/detail/ublock-origin/odfafepnkmbhccpbejgmiehpchacaeak">Edge Add-ons: uBlock Origin</a>
+                    <a class="linkbutton" title="Edge Add-ons: uBlock Origin" href="https://microsoftedge.microsoft.com/addons/detail/ublock-origin/odfafepnkmbhccpbejgmiehpchacaeak">Edge Add-ons: uBlock Origin</a>
                     <br>
                     <img src="adblocker/edge_add.png" alt="Add 'uBlock Origin' to Microsoft Edge? Add extension is circled">
                     <p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been successfully installed.</p>
                 <h3 id="FIREFOX">Installing uBlock Origin on Mozilla Firefox</h3>
                     <img src="adblocker/firefox_get.png" alt="Add uBlock Origin to Firefox">
                     <p>To install uBlock Origin on Mozilla Firefox you need to visit the uBlock Origin page in the Firefox Browser ADD-ONS and click on the "Add to Firefox" button.</p>
-                    <a class="linkbutton" title="Firefox Browser ADD-ONS: uBlock Origin" rel="nofollow" href="https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/">Firefox Browser ADD-ONS: uBlock Origin</a>
+                    <a class="linkbutton" title="Firefox Browser ADD-ONS: uBlock Origin" href="https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/">Firefox Browser ADD-ONS: uBlock Origin</a>
                     <br>
                     <img src="adblocker/firefox_add.png" alt="Add uBlock Origin? Add extension is circled">
                     <p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been successfully installed.</p>
                 <h3 id="CHROME">Installing uBlock Origin on Google Chrome</h3>
                     <img src="adblocker/chrome_get.png" alt="Add uBlock Origin to Chrome">
                     <p>To install uBlock Origin on Google Chrome you need to visit the uBlock Origin page in the chrome web store and click on the "Add to Chrome" button.</p>
-                    <a class="linkbutton" title="chrome web store: uBlock Origin" rel="nofollow" href="https://chromewebstore.google.com/detail/cjpalhdlnbpafiamejdnhcphjbkeiagm">chrome web store: uBlock Origin</a>
+                    <a class="linkbutton" title="chrome web store: uBlock Origin" href="https://chromewebstore.google.com/detail/cjpalhdlnbpafiamejdnhcphjbkeiagm">chrome web store: uBlock Origin</a>
                     <br>
                     <img src="adblocker/chrome_add.png" alt="Add 'uBlock Origin'? Add extension is circled">
                     <p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been added to Chrome.</p>
