--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="featuredarticle" title="The problems with advertising">
                     <h3>Advertising</h3>
                     <hr><!--Separator line-->
-                    <p>Everyone has heard of ads, but did you know that you can get rid of all those pesky ads from the games you play, from the websites you use, even the ones built into your devices. You can install a DNS based adblocker for free and it will work on any of your devices, even your Smart TV, thus improving the performance of your devices and making them less frustrating to use.</p>
+                    <p>Everyone has heard of ads, but did you know that you can get rid of all those pesky ads from the games you play, from the websites you use, and even the ads built into your devices. You can install a DNS based adblocker for free and it will work on any of your devices, even your Smart TV, thus improving the performance of your devices and making them less frustrating to use.</p>
                 </div>
             </div>
         </div>
