--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+    <link rel="canonical" href="https://hackbototechtips.github.io">
     <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Homepage | Hackboto Tech Tips</title> <!-- Document title -->
 </head>
