--- a/legal.html
+++ b/legal.html
@@ -26,6 +26,7 @@
             <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
             <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
             <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
+            <a href="tech_advice.html" title="Find tech advice here">Tech Advice</a>
             <a href="contact.html" title="Visit Contact page">Contact</a>
         </div>
         <div class="columnclose">
