--- a/map.html
+++ b/map.html
@@ -26,6 +26,7 @@
             <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
             <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
             <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
+            <a href="tech_advice.html" title="Find tech advice here">Tech Advice</a>
             <a href="contact.html" title="Visit Contact page">Contact</a>
         </div>
         <div class="columnclose">
@@ -61,6 +62,7 @@
                     <li><h3><a href="download_centre/popcnt_checker.html" title="Go to POPCNT Checker download page">POPCNT Checker</a></h3></li>
                     <li><h3><a href="download_centre/computer_optimiser.html" title="Go to Computer Optimiser download page">Computer Optimiser</a></h3></li>
                 </ul>
+            <h2><a href="tech_advice.html" title="Go to Tech Advice">Tech Advice</a></h2>
             <h2><a href="contact.html" title="Visit Contact page">Contact</a></h2> <!-- Level 2 heading -->
             <h2><a href="legal.html" title="Go to Legal">Legal</a></h2> <!-- Level 2 heading -->
         </div>
