--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -77,8 +77,9 @@
             <p>Once you have downloaded the check_popcnt.exe program, you just need to open it, simply click 'Open file' from the download menu or navigate to the download location and open it from there.</p>
             <img src="upgrading_to_windows11/popcntsupported.png" alt="POPCNT is supported on this processor">
             <p>When you run the check_popcnt.exe program you should see a message that reads 'POPCNT is supported on this processor', if you see a message that reads this and looks like the image above, you can install Windows 11 on your unsupported PC.</p>
+            <p><strong>Your PC must also support WDDM 2.0 graphics drivers or later otherwise file explorer and other system apps with have rendering issues. PCs that shipped with Windows 10 (2015+) should support WDDM 2.0 or later.</strong></p>
             <img src="upgrading_to_windows11/no_popcnt.png" alt="POPCNT is NOT supported on this processor">
-            <p>If your PC has this message 'POPCNT is NOT supported on this processor', you will be unable to upgrade to the latest version of Windows 11 and you will no longer be receiving security updates on Windows 10 after 2025, in this instance I would consider replacing your PC within the next year to stay secure.</p>
+            <p>If your PC has this message 'POPCNT is NOT supported on this processor', you will be unable to upgrade to the latest version of Windows 11 and you will no longer be receiving securzity updates on Windows 10 after 2025, in this instance I would consider replacing your PC within the next year to stay secure.</p>
             <h3 id="installing-unsupported">Installing Windows 11 on unsupported computer.</h3>
             <p><strong>This step is only for those who have an unsupported computer that is capable of running Windows 11</strong></p>
             <p>There is a tool available to bypass the Windows 11 arbitrary system requirements on PCs that are capable of running Windows 11, the tool is called 'bypass_windows11_requirements.cmd', you can download it from the link below.</p>
