--- a/map.html
+++ b/map.html
@@ -25,6 +25,7 @@
         <div class="columnnav">
             <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
             <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+            <a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
             <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
             <a href="tech_advice.html" title="Find tech advice here">Tech Advice</a>
             <a href="contact.html" title="Visit Contact page">Contact</a>
@@ -55,16 +56,20 @@
                 <li><h3><a href="pc_tips/windows_backup.html" title="Learn how you can backup your Windows PC.">Backing Up Windows 10/ 11</a></h3></li>
                 <li><h3><a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">Blocking ads on your PC</a></h3></li>
             </ul>
-            <h2><a href="download_centre.html" title="Go to File Downloads">Download Centre</a></h2>
+            <h2 class="l2"><a href="mobile_tips.html" title="Explore tips and tricks for your mobile device">Mobile Guides</a></h2> <!-- Level 2 heading -->
+            <ul>
+                <li><h3><a href="mobile_tips/dns_adblocker.html" title="Learn how you can block ads on your mobile using DNS">Blocking ads on your mobile</a></h3></li>
+            </ul>
+            <h2 class="l2"><a href="download_centre.html" title="Go to File Downloads">Download Centre</a></h2>
                 <ul><!-- Unordered list -->
                     <li><h3><a href="download_centre/settings_optimiser.html" title="Go to Settings Optimiser download page">Settings Optimiser</a></h3></li>
                     <li><h3><a href="download_centre/multi-pane_overlay_disable_reg.html" title="Go to Multi-Plane Overlay fix download page">MPO Fix .reg</a></h3></li>
                     <li><h3><a href="download_centre/popcnt_checker.html" title="Go to POPCNT Checker download page">POPCNT Checker</a></h3></li>
                     <li><h3><a href="download_centre/computer_optimiser.html" title="Go to Computer Optimiser download page">Computer Optimiser</a></h3></li>
                 </ul>
-            <h2><a href="tech_advice.html" title="Go to Tech Advice">Tech Advice</a></h2>
-            <h2><a href="contact.html" title="Visit Contact page">Contact</a></h2> <!-- Level 2 heading -->
-            <h2><a href="legal.html" title="Go to Legal">Legal</a></h2> <!-- Level 2 heading -->
+            <h2 class="l2"><a href="tech_advice.html" title="Go to Tech Advice">Tech Advice</a></h2>
+            <h2 class="l2"><a href="contact.html" title="Visit Contact page">Contact</a></h2> <!-- Level 2 heading -->
+            <h2 class="l2"><a href="legal.html" title="Go to Legal">Legal</a></h2> <!-- Level 2 heading -->
         </div>
     </section>
     <footer title="Website Footer"> <!-- Footer section -->
