--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -25,6 +25,7 @@
         <div class="columnnav">
             <a href="../index.html" title="Go to Home">Home</a> <!-- Navigation links -->
             <a class="active" href="../pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+            <a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
             <a href="../download_centre.html" title="Find file downloads here.">Download Centre</a>
             <a href="../tech_advice.html" title="Find tech advice here">Tech Advice</a>
             <a href="../contact.html" title="Visit Contact page">Contact</a>
