--- a/download_centre/multi-pane_overlay_disable_reg.html
+++ b/download_centre/multi-pane_overlay_disable_reg.html
@@ -55,9 +55,10 @@
             <h2 id="download">Downloading the .reg Files</h2>
                 <p>You can download the .reg files using the download button below, this should start the download process.</p>
                 <a class="linkbutton" title="Download MPO_Fix.zip" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/MPO_Fix.zip">Download MPO_Fix.zip</a>
+                <br>
                 <img src="multi-pane_overlay_disable_reg/MPO_FixFolder.png" alt="When you download the folder you should see two files, Disable_MPO.reg and Enable_MPO.reg">
                     <p>Once you have downloaded the file, you should have a .zip folder called MPO_Fix.zip, this folder should contain the Disable_MPO.reg and Enable_MPO.reg registry files, if you do not see these scripts, it is possible that there is a problem with the download, if this happens try downloading again.</p>
-            <h2 id="how-to-use">Explaining the .reg files</h2> 
+            <h2 id="how-to-use">Using the .reg files</h2> 
                 <p>The registry files are easy to use, you will have two files "Disable_MPO.reg" and "Enable_MPO.reg".</p>
                 <p>Disable_MPO.reg: This will disable Multi-Plane Overlay on your Windows 8.1 or later pc; this is used to apply the hardware acceleration fix.</p>
                 <p>Enable_MPO.reg: This will enable Multi-Plane Overlay and reverse any changes that have been made to your computer.</p>
