--- a/download_centre/settings_optimiser.html
+++ b/download_centre/settings_optimiser.html
@@ -62,7 +62,7 @@
                 <p>The script is really simple and easy to use, the script has been split into two files called "System__Settings_Optimiser.bat" and "User_Settings_Optimiser.bat".</p>
                 <p>System_Settings_Optimiser.bat: This script makes important changes to your entire computer and the admin account used to run the script, if you have only one account on your computer then you will only need to use this script.</p>
                 <p>User_Settings_Optimiser.bat: This script makes changes to other user accounts on the computer that don't have admin rights, you will need to run this script on each user account that is on your computer system after you have run the System_Settings_Optimiser.bat.</p>
-                <h3>Step 1, Run System__Settings_Optimiser</h3>
+                <h3>Step 1: Run System__Settings_Optimiser</h3>
                     <p>To Run the System_Settings_Optimiser you need to double click on it from within the folder mentioned in the previous section.</p>
                     <img src="settings_optimiser/step1.png" alt="Visual representation of error, there are three buttons you need to click on 'Run'.">
                         <p>When running the System_Settings_Optimiser you might see this error, you need to click 'Run' to continue."</p>
@@ -75,7 +75,7 @@
                     <img src="settings_optimiser/system_settings_optimiser.png" alt="Image representing the settings optimiser">
                         <p>By this stage the System_Settings_Optimiser should be running, you will be asked to read through the Terms and Conditions, enter 'Y' if you agree to the Terms and Conditions and would like to start the script, if you do not agree with the Terms and Conditions enter 'N' and the script will close, and no changes will be made to your computer.</p>
                         <p>Once the script has completed you will see a message telling you this, when you click OK, your computer will restart, and you can move onto step 2.</p>
-                <h3>Step 2, Run User__Settings_Optimiser</h3>
+                <h3>Step 2: Run User__Settings_Optimiser</h3>
                     <p>This script does not require admin rights; therefore, you can run it on both standard and admin accounts. If you have many user accounts on your computer, you will need to run the script on each account.</p>
                     <p>To run the script, you need to repeat the steps in step 1, however you need to run the User_Settings_Optimiser.bat instead of the System_Settings_Optimiser.bat.</p>
         <hr> 
