--- a/pc_tips.html
+++ b/pc_tips.html
@@ -87,6 +87,13 @@
                 <p>Are you getting sick of long loading times, popups, and distracting adverts everywhere on the internet? If you are you should learn about the uBlock Origin browser extension and how you can get rid of annoying ads once and for all.</p> <!-- Article excerpt -->
                 <a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">View Guide</a> <!-- Link to full article -->
             </div>
+            <div class="articlecolumn" title="Finding WDDM Version"> <!-- Article column -->
+                <h3>Finding your WDDM Version</h3> <!-- Article title -->
+                    <hr>
+                <img src="pc_tips/check_wddm_version/display_1_dxdiag.png" alt="An image representing dxdiag" title="Image demonstrating dxdiag tool."><!-- Image related to the article -->
+                <p>Do you need to find the WDDM Driver Model version for your computer? This guide will assist you in using the dxdiag tool to find your WDDM version.</p> <!-- Article excerpt -->
+                <a href="pc_tips/check_wddm_version.html" title="Learn about finding your WDDM version">View Guide</a> <!-- Link to full article -->
+            </div>
         </div>
     </section>
     <footer title="Website Footer"> <!-- Footer section -->
