--- a/map.html
+++ b/map.html
@@ -55,6 +55,7 @@
                 <li><h3><a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn how you can fix the back screen artefacts caused by hardware acceleration.">Fix Hardware Acceleration Black Screen</a></h3></li>
                 <li><h3><a href="pc_tips/windows_backup.html" title="Learn how you can backup your Windows PC.">Backing Up Windows 10/ 11</a></h3></li>
                 <li><h3><a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">Blocking ads on your PC</a></h3></li>
+                <li><h3><a href="pc_tips/check_wddm_version.html" title="Learn about checking your WDDM driver version">Finding your WDDM version</a></h3></li>
             </ul>
             <h2 class="l2"><a href="mobile_tips.html" title="Explore tips and tricks for your mobile device">Mobile Guides</a></h2> <!-- Level 2 heading -->
             <ul>
