--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
             <a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
             <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
-            <a href="tech_advice.html" title="Find tech advice here">Tech Advice</a>
             <a href="contact.html" title="Visit Contact page">Contact</a>
         </div>
         <div class="columnclose">
@@ -40,12 +39,12 @@
     <section title="Main Content"> <!-- Main content section -->
         <div class="welcometext">
             <h1>Welcome to Hackboto Tech Tips</h1> <!-- Welcome text -->
-            <p>Hi, you have reached the Hackboto Tech Tips website, on this website you will find lots of little helpful tips and tricks regarding the tech you use and how you can make better use of it.</p> <!-- Introduction paragraph -->
+            <p>Hello and welcome to the Hackboto Tech Tips website, on this website you will find lots of little helpful tips and tricks regarding the tech you use and how you can make better use of it.</p> <!-- Introduction paragraph -->
         </div>
            <br>
         <div class="articles">
             <h2>Why I started this website</h2> <!-- Section heading -->
-            <p>I have started this website to help improve the world around me by sharing my technical knowledge to those who are less tech savvy than myself. There are many users of technology around the world but very few of these technology users know the essentials such as maintaining their devices or buying appropriate devices for their needs.</p>
+            <p>I have started the Hackboto Tech Tips website to share my useful tech knowledge with the world to help you make the most of your existing computing hardware and to share helpful tips and tricks regarding computing technologies.</p>
             <div class="articlerow">
                 <div class="featuredarticle" title="The problems with Windows 11">
                     <h3>Windows 11</h3> <!-- Article title -->
