Updated settings optimiser to v1.2.4

--- a/download_centre/settings_optimiser.html
+++ b/download_centre/settings_optimiser.html
@@ -52,8 +52,8 @@
                 <p>The script will disable things that are generally considered to be bloatware and adware on your PC, this script will remove things like Co-Pilot AI, Feed from Microsoft Edge browser, Windows spotlight, etc.</p>
             <h2 id="download">Downloading the scripts</h2>
                 <p>You can download the scripts using the download button below, this should start the download process.</p>
-                <a class="linkbutton" title="Download Settings_Optimiser.zip" href="https://github.com/H90HSORH0J30JHDSRH/Windows_Optimisation_Scripts/releases/download/1.2.3/Settings_Optimiser.zip">Download Settings_Optimiser.zip</a>
-                <p><strong>The latest version is 1.2.3</strong></p>
+                <a class="linkbutton" title="Download Settings_Optimiser.zip" href="https://github.com/H90HSORH0J30JHDSRH/Windows_Optimisation_Scripts/releases/download/1.2.4/Settings_Optimiser.zip">Download Settings_Optimiser.zip</a>
+                <p><strong>The latest version is 1.2.4</strong></p>
                 <p>The script is in two halves, read the "How do I use the script?" section to learn more.</p>
                 <img src="settings_optimiser/download.png" alt="When you download the folder you should see two files, System__Settings_Optimiser.bat and User_Settings_Optimiser.bat">
                     <p>Once you have downloaded the file, you should have a .zip folder, this folder should contain the System__Settings_Optimiser.bat and User_Settings_Optimiser.bat scripts, if you do not see these scripts, it is possible that there is a problem with the download, if this happens try downloading again.</p>
@@ -65,7 +65,7 @@
                     <p>To Run the System_Settings_Optimiser you need to double click on it from within the folder mentioned in the previous section.</p>
                     <img src="settings_optimiser/step1.png" alt="Visual representation of error, there are three buttons you need to click on 'Run'.">
                         <p>When running the System_Settings_Optimiser you might see this error, you need to click 'Run' to continue."</p>
-                    <img src="settings_optimiser/clickonmoreinfo.png" alt="Visual representation of error, you might face an antivirus error, if this happens click on 'More info'.">
+                    <img src="settings_optimiser/clickonmoreinfo.png" alt="Visual representation of the error, you might face an antivirus error, if this happens click on 'More info'.">
                         <p>Sometimes the script will be blocked by the built-in antivirus, this is because the script was not created on your computer, if you see this error you will need to click on 'More info'.</p>
                     <img src="settings_optimiser/runanyway.png" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
                         <p>After clicking on 'More info' you will need to click on 'Run anyway' to continue.</p>    
@@ -78,7 +78,7 @@
                     <p>This script does not require admin rights; therefore, you can run it on both standard and admin accounts. If you have many user accounts on your computer, you will need to run the script on each account.</p>
                     <p>To run the script, you need to repeat the steps in step 1, however you need to run the User_Settings_Optimiser.bat instead of the System_Settings_Optimiser.bat.</p>
         <hr> 
-        <p>Page Updated: 21/06/2024</p>
+        <p>Page Updated: 08/08/2024</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
